spade-tests/src/snapshots/spade_tests__affine_check__destructuring_affine_type_requires_use_of_subtypes.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused affine item
  ┌─ testinput:2:13
  │
2 │     let (x, y) = a;
  │             ^ This must be used
  │
  = Required because it is of type &mut


